--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -66,15 +66,21 @@ input {
     display: flex;
     background-color: var(--secondary-color);
     color: var(--primary-color);
-    border-radius: 15px;
+    border-radius: 10px;
     padding: 5% 5%;
     margin: 0 auto;
     text-decoration: none;
+    box-shadow: #000 0 10px 10px ;
 }
 
 .btn:hover {
     background-color: var(--tertiary-color);
     color: var(--primary-color);
+    box-shadow: #000 0 5px 10px
+}
+
+.btn:active {
+    box-shadow: none;
 }
 
 .choice-btn {
